Fixed bug where long task subject length made the task overflow

--- a/app/webroot/css/tasks.index.css
+++ b/app/webroot/css/tasks.index.css
@@ -30,18 +30,23 @@
 }
 
 .task {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .task > .well {
 	padding:10px;
-	height:35px;
+	min-height: 35px;
+	max-height: 75px;
 	background:#d3d3d3;
+
+	-webkit-border-radius:4px 0 0 4px;
+	-moz-border-radius:4px 0 0 4px;
+	border-radius:4px 0 0 4px;
 }
 
 .task img {
 	width:auto;
-	height:100%;
+	max-height:35px;
 }
 
 .task p {
@@ -65,35 +70,34 @@
 	float:left;
 	width:7px;
 	height:55px;
-	border:1px solid #E3E3E3;
-	border-right:0;
+	/*border-right:1px solid #E3E3E3;*/
 	-webkit-border-radius:4px 0 0 4px;
 	-moz-border-radius:4px 0 0 4px;
 	border-radius:4px 0 0 4px;
 }
 
 .type_bar_bug {
-	background-color: #B94A48;
+	border-left: 7px solid #B94A48;
 }
 
 .type_bar_duplicate {
-	background-color: #F89406;
+	border-left: 7px solid  #F89406;
 }
 
 .type_bar_enhancement {
-	background-color:#468847;
+	border-left: 7px solid #468847;
 }
 
 .type_bar_invalid {
-	background-color: #999;
+	border-left: 7px solid  #999;
 }
 
 .type_bar_question {
-	background-color: #3A87AD;
+	border-left: 7px solid  #3A87AD;
 }
 
 .type_bar_wontfix {
-	background-color: #333;
+	border-left: 7px solid  #333;
 }
 
 .label, .lead {
